# NatNetSDKCrossplatform

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: NatNetCAPI.h  NatNetClient.h  NatNetRepeater.h  NatNetRequests.h  NatNetTypes.h
lib/windows-x64/: NatNetLib.lib  NatNetML.xml
samples/MinimalClient/: MinimalClient.cpp
samples/PacketClient/: PacketClient.cpp  PacketClientUDPBroadcast.cpp
samples/PythonClient/: DataDescriptions.py  MoCapData.py  NatNetClient.py  PythonSample.py
samples/SampleClient/: ReadMe.txt  SampleClient.cpp  makefile
src/: PacketClientHelper.cpp  main.cpp  multicast_receiver.cpp
